# stockiha

./: .cfignore  .env  .env.development  .env.example  .env.production  .gitattributes  .gitignore  .htaccess  .mcp.json  .npmrc  .stylelintrc.json  .vercelignore  .viterc  ADD_CUSTOM_DOMAIN.md  ADVANCED_PERFORMANCE_FIXES.md  AI_ASSISTANT_README.md  AI_PROMPT_STORE_THEMES.md  ALL_REMAINING_ISSUES_FIXED.md  ANALYTICS_ENHANCED_README.md  APEX_DOMAIN_SOLUTION_SUMMARY.md  APPLY_ALL_SUBSCRIPTION_FIXES.sql  APPLY_EVERYTHING.sql  APPLY_PRODUCT_DELETION_FIX.sql  APPLY_SUBSCRIPTION_FIXES.md  APPLY_SUBSCRIPTION_FIXES_COMPLETE.md  APPS_IMPROVEMENTS_SUMMARY.md  APP_INITIALIZATION_OPTIMIZATION.md  AUDIT_SYSTEM_MIGRATION_GUIDE.md  AUTH_USAGE_GUIDE.md  AVATAR_UPLOAD_SOLUTION.md  BEFORE_AFTER_COMPARISON.md  BUILD_OPTIMIZATION_APPLIED.md  BUILD_OPTIMIZATION_REPORT.md  CACHE_AUTH_ISSUES_ANALYSIS.md  CACHE_CLEARING_FIX.md  CACHE_DISABLED_SUMMARY.md  CACHE_SYSTEM_README.md  CALL_CENTER_SYSTEM_PLAN.md  CLOUDFLARE_DEPLOY.md  CLOUDFLARE_DEPLOYMENT_SUCCESS.md  (+1012 more)
.cursor/: mcp.json
api/: _supabase-admin.js  conversion-events.js  facebook-conversion-api.js  product-og.js  yalidine-fees-proxy.js
assets/: icon.icns
database/: README_index_optimization.md  README_optimization_complete.md  add_staff_tracking_simple.sql  add_staff_tracking_to_orders.sql  admin_tables_schema.sql  auto_assign_order_function.sql  (+18 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.pub
src-tauri/capabilities/: default.json  sql.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  updater.rs
(+8134 files in other folders)
