[package]
name = "stockiha-tauri"
version = "1.0.16"
description = "سطوكيها - منصة إدارة المتاجر ونقاط البيع"
authors = ["Stockiha Team <support@stockiha.com>"]
license = "MIT"
repository = "https://github.com/uzaydz/stockiha"
edition = "2021"
build = "build.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

[dependencies.tauri]
version = "2"
features = [
  "tray-icon",
  "devtools"
]

[dependencies.tauri-plugin-sql]
version = "2"
features = ["sqlite"]

[dependencies.tauri-plugin-updater]
version = "2"

[dependencies.tauri-plugin-process]
version = "2"

[dependencies.tauri-plugin-log]
version = "2"

[dependencies.tauri-plugin-notification]
version = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
